--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,4 @@ title: Kyle Frost
 description: Game Development Portfolio
 theme: jekyll-theme-minimal
 layout: page
-title: "PAGE TITLE"
-permalink: /URL-PATH/
+permalink: /home/
